--- a/src/app/maps/components/search-results/search-results.component.html
+++ b/src/app/maps/components/search-results/search-results.component.html
@@ -1,16 +1,26 @@
-<div class="alert alert-primary mt-2 text-center">
-  <h6>Cargando</h6>
-  <span>Espere...</span>
+
+
+<div *ngIf="isLoadingPlaces"
+    class="alert alert-primary mt-2 text-center">
+    <h6>Cargando</h6>
+    <span>Espere por favor...</span>
 </div>
 
-<ul class="list-group mt-2">
-  <li class="list-group-item list-group-item-action pointer">
-    <h6>Lugar</h6>
-    <p>
-      Description Description Description
-    </p>
-    <button class="btn btn-sm btn-outline-primary">
-      Direcciones
-    </button>
-  </li>
+<ul class="list-group mt-2" *ngIf="places.length > 0">
+
+    <li *ngFor="let place of places"
+        class="list-group-item list-group-item-action pointer"
+        [class.active]="place.id === selectedId"
+        (click)="flyTo( place )"
+    >
+        <h6>{{ place.text_es }}</h6>
+        <p>{{ place.place_name }}</p>
+        <button
+            class="btn btn-sm"
+            (click)="getDirections( place )"
+            [ngClass]="(place.id === selectedId) ? 'btn-outline-light':'btn-outline-primary'"
+        >
+            Direcciones
+        </button>
+    </li>
 </ul>
